--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,174 +1,44 @@
-header,footer{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    border-style: none;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+#header {
+	margin: 0 auto;
+	padding: 50px 0 50px;
+	text-align: center;
+	width: 960px;
 }
-header, footer{
-    display: block;
-}.bg-dark{background-color:#212934!important}
-
-#footer .copyright {
-    color: #9fa3a6;
+#header a.title {
+	display: block;
+	margin: 0 auto;
+	padding: 0;
+	width: 340px;
 }
-
-.rounded-circle{
-    max-width : 55px;
-    height : 55px;
-    border-radius:50%!important;
-    padding: 0 1em 0 0;
+#header a.title img {
+	border: 0;
+	display: block;
+	margin: 0;
+	padding: 0;
+    width: 100%;
 }
 
-/*완료*/
-.align-items-center{align-items:center!important}
-
-.navbar{
-    position:relative;
-    display:flex;
-    flex-wrap:wrap;
-    align-items:center;
-    justify-content:space-between;
-    padding-top:.5rem;
-    padding-bottom:.5rem
+#header ul {
+	margin: 0;
+	padding: 56px 0 0;
 }
-
-.navbar>.container,.navbar>.container-fluid,
-.navbar>.container-lg,.navbar>.container-md,
-.navbar>.container-sm,.navbar>.container-xl,
-.navbar>.container-xxl{
-    display:flex;
-    flex-wrap:inherit;
-    align-items:center;
-    justify-content:space-between
+#header ul li {
+	display: inline;
+	list-style: none;
+	margin: 0;
+	padding: 0 19px;
 }
-.navbar-brand{
-    padding-top:.3125rem;
-    padding-bottom:.3125rem;
-    margin-right:1rem;
-    font-size:1.25rem;
-    text-decoration:none;
-    white-space:nowrap
+#header ul li a {
+	color: #252525;
+	display: inline-block;
+	font-family: "Arial Black", Gadget, sans-serif;
+	font-size: 14px;
+	font-weight: normal;
+	margin: 0;
+	padding: 0 0 3px;
+	text-decoration: none;
+	text-transform: uppercase;
 }
-.navbar-nav{
-    display:flex;
-    flex-direction:column;
-    padding-left:0;
-    margin-bottom:0;
-    list-style:none
+#header ul li a:hover {
+	color: #0ba39c;
 }
-.navbar-nav .nav-link{
-    padding-right:0;
-    padding-left:0
-}
-.navbar-nav .dropdown-menu{
-    position:static
-}
-.navbar-text{
-    padding-top:.5rem;
-    padding-bottom:.5rem
-}
-.navbar-collapse{
-    align-items:center;
-    width:100%
-}
-.navbar-toggler{
-    padding:.25rem .75rem;
-    font-size:1.25rem;
-    line-height:1;
-    background-color:transparent;
-    border:1px solid transparent;
-    border-radius:.25rem;
-    transition:box-shadow .15s ease-in-out
-}
-@media (prefers-reduced-motion:reduce){
-    .navbar-toggler{transition:none}
-}
-.navbar-toggler:hover{text-decoration:none}.navbar-toggler:focus{text-decoration:none;outline:0;box-shadow:0 0 0 .25rem}.navbar-toggler-icon{display:inline-block;width:1.5em;height:1.5em;vertical-align:middle;background-repeat:no-repeat;background-position:center;background-size:100%}@media (min-width:576px){.navbar-expand-sm{flex-wrap:nowrap;justify-content:flex-start}.navbar-expand-sm .navbar-nav{flex-direction:row}.navbar-expand-sm .navbar-nav .dropdown-menu{position:absolute}.navbar-expand-sm .navbar-nav .nav-link{padding-right:.5rem;padding-left:.5rem}.navbar-expand-sm .navbar-collapse{display:flex!important}.navbar-expand-sm .navbar-toggler{display:none}}@media (min-width:768px){.navbar-expand-md{flex-wrap:nowrap;justify-content:flex-start}.navbar-expand-md .navbar-nav{flex-direction:row}.navbar-expand-md .navbar-nav .dropdown-menu{position:absolute}.navbar-expand-md .navbar-nav .nav-link{padding-right:.5rem;padding-left:.5rem}.navbar-expand-md .navbar-collapse{display:flex!important}.navbar-expand-md .navbar-toggler{display:none}}@media (min-width:992px){.navbar-expand-lg{flex-wrap:nowrap;justify-content:flex-start}.navbar-expand-lg .navbar-nav{flex-direction:row}.navbar-expand-lg .navbar-nav .dropdown-menu{position:absolute}.navbar-expand-lg .navbar-nav .nav-link{padding-right:.5rem;padding-left:.5rem}.navbar-expand-lg .navbar-collapse{display:flex!important}.navbar-expand-lg .navbar-toggler{display:none}}@media (min-width:1200px){.navbar-expand-xl{flex-wrap:nowrap;justify-content:flex-start}.navbar-expand-xl .navbar-nav{flex-direction:row}.navbar-expand-xl .navbar-nav .dropdown-menu{position:absolute}.navbar-expand-xl .navbar-nav .nav-link{padding-right:.5rem;padding-left:.5rem}.navbar-expand-xl .navbar-collapse{display:flex!important}.navbar-expand-xl .navbar-toggler{display:none}}@media (min-width:1400px){.navbar-expand-xxl{flex-wrap:nowrap;justify-content:flex-start}.navbar-expand-xxl .navbar-nav{flex-direction:row}.navbar-expand-xxl .navbar-nav .dropdown-menu{position:absolute}.navbar-expand-xxl .navbar-nav .nav-link{padding-right:.5rem;padding-left:.5rem}.navbar-expand-xxl .navbar-collapse{display:flex!important}.navbar-expand-xxl .navbar-toggler{display:none}}.navbar-expand{flex-wrap:nowrap;justify-content:flex-start}.navbar-expand .navbar-nav{flex-direction:row}.navbar-expand .navbar-nav .dropdown-menu{position:absolute}.navbar-expand .navbar-nav .nav-link{padding-right:.5rem;padding-left:.5rem}.navbar-expand .navbar-collapse{display:flex!important}.navbar-expand .navbar-toggler{display:none}.navbar-light 
-.navbar-brand{
-    color:rgba(0,0,0,.9)
-}
-.navbar-light .navbar-brand:focus,.navbar-light 
-.navbar-brand:hover{
-    color:rgba(0,0,0,.9)}.navbar-light .navbar-nav .nav-link{color:rgba(0,0,0,.55)}.navbar-light .navbar-nav .nav-link:focus,.navbar-light .navbar-nav .nav-link:hover{color:rgba(0,0,0,.7)}.navbar-light .navbar-nav .nav-link.disabled{color:rgba(0,0,0,.3)}.navbar-light .navbar-nav .nav-link.active,.navbar-light .navbar-nav .show>.nav-link{color:rgba(0,0,0,.9)}.navbar-light .navbar-toggler{color:rgba(0,0,0,.55);border-color:rgba(0,0,0,.1)}.navbar-light .navbar-toggler-icon{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")}.navbar-light .navbar-text{color:rgba(0,0,0,.55)}.navbar-light .navbar-text a,.navbar-light .navbar-text a:focus,.navbar-light .navbar-text a:hover{color:rgba(0,0,0,.9)}.navbar-dark .navbar-brand{color:#fff}.navbar-dark .navbar-brand:focus,.navbar-dark .navbar-brand:hover{color:#fff}.navbar-dark .navbar-nav .nav-link{color:rgba(255,255,255,.55)}.navbar-dark .navbar-nav .nav-link:focus,.navbar-dark .navbar-nav .nav-link:hover{color:rgba(255,255,255,.75)}.navbar-dark .navbar-nav .nav-link.disabled{color:rgba(255,255,255,.25)}.navbar-dark .navbar-nav .nav-link.active,.navbar-dark .navbar-nav .show>.nav-link{color:#fff}.navbar-dark .navbar-toggler{color:rgba(255,255,255,.55);border-color:rgba(255,255,255,.1)}.navbar-dark .navbar-toggler-icon{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")}.navbar-dark .navbar-text{color:rgba(255,255,255,.55)}.navbar-dark .navbar-text a,.navbar-dark .navbar-text a:focus,.navbar-dark .navbar-text a:hover{color:#fff}
-
-#templatemo_main_nav .navbar .nav-icon { margin-right: 20px;}
-
-/*// Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) {
-    #templatemo_main_nav .navbar-nav {max-width: 450px;}
-   }
-  
-  /* Large devices (desktops, 992px and up)*/
-  @media (min-width: 992px) {
-    #templatemo_main_nav .navbar-nav {max-width: 550px;}
-    #template-mo-zay-hero-carousel .carousel-item {min-height: 30rem !important;}
-    .product-wap .h3, .product-wap li, .product-wap i, .product-wap p {font-size: 18px !important;}
-    .product-wap .product-color-dot {
-      width: 12px;
-      height: 12px;
-    }
-  }
-
-#template{
-    background:#efefef!important
-}#carousel-related-product .slick-slide:focus{
-    outline:0!important
-}#carousel-related-product .slick-dots li button:before{
-    font-size:15px;margin-top:20px
-}.brand-img{
-    filter:grayscale(100%);opacity:.5;transition:.5s
-}.brand-img:hover{
-    filter:grayscale(0);opacity:1
-}#template .carousel-indicators li{
-    margin-top:-50px;background-color:#59ab6e
-}#template .carousel-control-next i,#template .carousel-control-prev i{
-    color:#59ab6e!important;font-size:2.8em!important
-}.tempaltemo-carousel .h1{
-    font-size:.5em!important;color:#000!important
-}.services-icon-wap{
-    transition:.3s
-}.services-icon-wap:hover,.services-icon-wap:hover i{
-    color:#fff
-}.services-icon-wap:hover{
-    background:#69bb7e
-}.leaflet-control,.leaflet-control a{
-    font-size:10px!important
-}.form-control{
-    border:1px solid #e8e8e8}#tempaltemo_footer a{
-        color:#dcdde1
-    }#tempaltemo_footer a:hover{
-        color:#68bb7d
-    }#tempaltemo_footer ul.footer-link-list li{
-        padding-top:10px
-    }#tempaltemo_footer ul.footer-icons li{
-        width:2.6em;height:2.6em;line-height:2.6em
-    }#tempaltemo_footer ul.footer-icons li:hover{
-        background-color:#cfd6e1;transition:.5s
-    }#tempaltemo_footer ul.footer-icons li:hover i{
-        color:#212934;transition:.5s
-    }#tempaltemo_footer .border-light{
-        border-color:#2d343f!important
-    }.product-wap .h3,.product-wap i,.product-wap li,.product-wap p{
-        font-size:12px!important
-    }.product-wap .product-color-dot{
-        width:6px;height:6px}@media (min-width:576px){
-            .tempaltemo-carousel .h1{
-                font-size:1em!important}
-            }@media (min-width:768px){
-                #templatemo_main_nav .navbar-nav{
-                    max-width:450px
-                }
-            }@media (min-width:992px){
-                #templatemo_main_nav .navbar-nav{
-                    max-width:550px
-                }#template .carousel-item{
-                    min-height:30rem!important
-                }.product-wap .h3,.product-wap i,.product-wap li,.product-wap p{
-                    font-size:18px!important
-                }.product-wap .product-color-dot{
-                    width:12px;height:12px
-                }
-            }
