--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,3 +42,11 @@
 #header ul li a:hover {
 	color: #0ba39c;
 }
+
+/* Icons */
+.box {
+    width: 50px;
+    height: 50px; 
+    border-radius: 70%;
+    overflow: hidden;
+}
