--- a/assets/css/member.css
+++ b/assets/css/member.css
@@ -127,7 +127,7 @@
   bottom: 0;
   right: 0;
   border-radius: 50%;
-  background: #fff;
+  background: #d89911;
   animation: blink 1.33s ease-out infinite;
   z-index: -1;
 }
