--- a/assets/css/member.css
+++ b/assets/css/member.css
@@ -99,7 +99,7 @@
   bottom: 0;
   right: 0;
   border-radius: 50%;
-  background: #fff;
+  background: #d89911;
   animation: pulse 0.4s ease infinite alternate;
   z-index: -1;
 }
