--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,7 @@
 #footer {
 	background: #252525;
 	margin: 0;
-	padding: 36px 0 42px;
+	padding: 0;
 }
 #footer div {
 	margin: 0 auto;
@@ -71,7 +71,7 @@
 	color: #fff;
 	float: left;
 	line-height: 44px;
-	margin: 0 0 0 10px;
+	margin: auto;
 	padding: 0;
 }
 #footer div ul {
